--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Sandra is a detail-oriented writer who specializes in writing high-quality, SEO optimized content for the web, particularly in the travel niche.">
-		<title>Sandra Henriques Gajjar | Writer. Blogger. Storyteller</title>
+		<meta name="description" content="Sandra Henriques Gajjar is a detail-oriented freelance website content writer. She has an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization.">
+		<title>Sandra Henriques Gajjar | Website content writer</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
@@ -14,9 +14,8 @@
 		<section class="welcome-section">
 
 			<ul class="info">
-				<li>Writer</li>
-				<li>Blogger</li>
-				<li>Storyteller</li>
+				<li>LOGO GOES HERE shenriques.com</li>
+		
 			</ul>
 
 		</section>
@@ -25,79 +24,81 @@
 
 			<section class="about-section">
 
-				<p>Sandra Henriques Gajjar was born in the Azores in 1978 and has been based in Lisbon since 1997. She blogs about cultural tourism at <a href="https://www.tripper.pt" target="_blank">Tripper</a>, is a contributing writer for Lonely Planet and has worked as a freelance ghostwriter and copywriter in a variety of projects since 2014. She is also the author of <a href="https://itunes.apple.com/book/lisbon-travel-guide-for-urban-explorers/id1016439460?mt=11&ign-mpt=uo%3D4" target="_blank">Lisbon Travel Guide for Urban Explorers</a>.</p>
-
-				<p>Sandra is a detail-oriented writer who specializes in writing high-quality, SEO optimized content for the web, particularly in the travel niche.</p>
+				<p>I’ve been a website content writer since 2014, with the ability to research and write on a variety of topics that will always be on-brand and match the client’s tone. I have an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization using only white hat techniques.</p>
+			
 
 			</section>
 
 			<section class="works-section">
 
-				<h2>Selected Works</h2>
+				<h2>Content writing services</h2>
+		
 
 				<div class="articles">
 
 					<div class="article">
 
-						<h3>Best Things to Do in Nashville if You Don’t Like Country Music</h3>
+						<h3>Blog posts</h3>
+						<p>€50 / blog post</p>
+<ul>
+	<li>Without byline</li>
+	<li>Keyword and topic research</li>
+	<li>SEO optimization</li>
+	<li>Two revisions included</li>
+</ul>
 
-						<p>Branded content for a IHG – InterContinental Hotels Group marketing campaign.</p>
-
-						<a href="https://www.tripper.pt/tips-inspiration/best-things-to-do-in-nashville-if-you-dont-like-country-music">Read Article</a>
-
-					</div>
-
-					<div class="article">
-
-						<h3>Why the Azores Are the Best European Island Destination for All Types Of Travelers</h3>
-
-						<p>Blog post for The Huffington Post (US Edition).</p>
-
-						<a href="http://www.huffingtonpost.com/entry/why-the-azores-are-the-best-european-island-destination_us_57a72d46e4b0c94bd3c9b162">Read Article</a>
+		
 
 					</div>
 
 					<div class="article">
 
-						<h3>Where to find 10 of Lisbon’s best views</h3>
+						<h3>Freelance writing</h3>
+						<p>€0.20-0.25 / word</p>
+<ul>
+	<li>With byline</li>
+	<li>Keyword and topic research</li>
+	<li>SEO optimization</li>
+	<li>Two revisions included</li>
+</ul>
 
-						<p>First article as a contributing writer for Lonely Planet.</p>
-
-						<a href="https://www.lonelyplanet.com/portugal/lisbon/travel-tips-and-articles/where-to-find-10-of-lisbons-best-views">Read Article</a>
-
-					</div>
-
-					<div class="article">
-
-						<h3>7 Cafes in Lisbon You Must Visit</h3>
-
-						<p>Article for Travioor.</p>
-
-						<a href="https://www.travioor.com/articles/7-cafes-in-lisbon-you-must-visit">Read Article</a>
+						
 
 					</div>
 
 					<div class="article">
 
-						<h3>5 Cities You Must Visit in Portugal Beyond Porto and Lisbon</h3>
+						<h3>Website content writing</h3>
 
-						<p>Article for Flight Network.</p>
+						<p>€200 / 5 pages</p>
 
-						<a href="http://www.flightnetwork.com/blog/5-cities-you-must-visit-in-portugal-beyond-porto-and-lisbon/">Read Article</a>
+<ul>
+	<li>Keyword research</li>
+	<li>SEO optimization</li>
+	<li>Royalty-free image sourcing (when applicable)</li>
+	<li>Three revisions included</li>
+</ul>
 
-					</div>
+</div>
 
-					<div class="article">
+<div class="article">
 
-						<h3>7 Awesome Things to do in Flores Island, Azores, Portugal</h3>
+	<h3>Sponsored campaigns on Tripper</h3>
 
-						<p>Article for Two Monkeys Travel Group.</p>
+	<p>€300-900</p>
+<ul>
+<li><a href="https://www.tripper.pt/work-with-tripper" target="_blank">Travel-related services and brands only</a></li>
+<li>Social media promotion</li>
+<li>Sponsored blog posts</li>
+<li>Brand activation campaigns</li>
+</ul>
 
-						<a href="http://twomonkeystravelgroup.com/flores-island-azores-portugal-travel-blog/">Read Article</a>
+	
 
-					</div>
+</div>
 
-				</div>
+
+</div>				
 
 			</section>
 
@@ -107,17 +108,17 @@
 
 				<div class="social">
 
-					<a href="https://facebook.com/sandrahenriquesgajjar" target="_blank"><svg class="facebook icon" viewBox="0 0 512 512"><path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/></svg></a>
+					<a href="https://facebook.com/tripprblog" target="_blank"><svg class="facebook icon" viewBox="0 0 512 512"><path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/></svg></a>
 
 					<a href="https://twitter.com/tripprblog" target="_blank"><svg class="twitter icon" viewBox="0 0 512 512"><path d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z"/></svg></a>
 
-					<a href="mailto:sandra.henriques78@gmail.com"><svg class="mail icon" viewBox="0 0 512 512"><path d="M101.3 141.6v228.9h0.3 308.4 0.8V141.6H101.3zM375.7 167.8l-119.7 91.5 -119.6-91.5H375.7zM127.6 194.1l64.1 49.1 -64.1 64.1V194.1zM127.8 344.2l84.9-84.9 43.2 33.1 43-32.9 84.7 84.7L127.8 344.2 127.8 344.2zM384.4 307.8l-64.4-64.4 64.4-49.3V307.8z"/></svg></a>
+					<a href="mailto:hello@tripper.pt"><svg class="mail icon" viewBox="0 0 512 512"><path d="M101.3 141.6v228.9h0.3 308.4 0.8V141.6H101.3zM375.7 167.8l-119.7 91.5 -119.6-91.5H375.7zM127.6 194.1l64.1 49.1 -64.1 64.1V194.1zM127.8 344.2l84.9-84.9 43.2 33.1 43-32.9 84.7 84.7L127.8 344.2 127.8 344.2zM384.4 307.8l-64.4-64.4 64.4-49.3V307.8z"/></svg></a>
 
 				</div>
 			</section>
 
 			<section class="copyright">
-				<p>&copy; 2014 - 2017 Sandra Henriques Gajjar</p>
+				<p>&copy; 2014 - 2018 Sandra Henriques Gajjar</p>
 				<p>Made by <a href="https://www.dhanishgajjar.com" target="_blank">DG</a></p>
 			</section>
 		</div>
