--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Sandra Henriques Gajjar is a detail-oriented freelance website content writer. She has an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization.">
-		<title>Sandra Henriques Gajjar | Website content writer</title>
+		<meta name="description" content="Sandra Henriques Gajjar is a detail-oriented freelance web content writer. She has an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization.">
+		<title>Sandra Henriques Gajjar | Web content writer</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 		<section class="welcome-section">
 
 			<ul class="info">
-				<li>LOGO GOES HERE shenriques.com</li>
+				<li>shenriques.com</li>
 
 			</ul>
 
@@ -24,7 +24,7 @@
 
 			<section class="about-section">
 
-				<p>I’ve been a website content writer since 2014, with the ability to research and write on a variety of topics that will always be on-brand and match the client’s tone. I have an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization using only white hat techniques.</p>
+				<p>I’ve been a web content writer since 2014, with the ability to research and write on a variety of topics that will always be on-brand and match the client’s tone. I have an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization using only white hat techniques.</p>
 
 
 			</section>
@@ -59,7 +59,7 @@
 					</div>
 
 					<div class="article">
-						<h3>Website content writing</h3>
+						<h3>Website copywriting</h3>
 						<p>€200 / 5 pages</p>
 						<ul>
 							<li>Keyword research</li>
