Updated prices and descriptions
Updated description for blog posts and updated website copywriting values

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h3>Blog posts</h3>
 						<p>€50 / blog post</p>
 						<ul>
-							<li>Without byline</li>
+							<li>Ghostwritten (Without byline)</li>
 							<li>Keyword and topic research</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
@@ -60,7 +60,7 @@
 
 					<div class="article">
 						<h3>Website copywriting</h3>
-						<p>€200 / 5 pages</p>
+						<p>€200 / 3 pages</p>
 						<ul>
 							<li>Keyword research</li>
 							<li>SEO optimization</li>
