Update prices and items

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 						<p>€50 / blog post</p>
 						<ul>
 							<li>Ghostwritten (Without byline)</li>
-							<li>Keyword and topic research</li>
+							<li>Minimum 5 blog posts</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
+							<li>€25 for each additional revision</li>
 						</ul>
 					</div>
 
@@ -52,6 +53,7 @@
 						<p>€0.20-0.25 / word</p>
 						<ul>
 							<li>With byline</li>
+							<li>Minimum 500 words</li>
 							<li>Keyword and topic research</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
@@ -64,13 +66,14 @@
 						<ul>
 							<li>Keyword research</li>
 							<li>SEO optimization</li>
-							<li>Royalty-free image sourcing (when applicable)</li>
-							<li>Three revisions included</li>
+							<li>Royalty-free image sourcing (if needed)</li>
+							<li>Two revisions included</li>
+<li>€25 for each additional revision</li>
 						</ul>
 					</div>
 
 					<div class="article">
-						<h3>Sponsored campaigns on Tripper</h3>
+						<h3>Content marketing campaigns on Tripper</h3>
 						<p>€300-900</p>
 						<ul>
 						<li><a href="https://www.tripper.pt/work-with-tripper" target="_blank">Travel-related services and brands only</a></li>
