--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 
 			<section class="works-section">
 
-				<h2>Content writing services</h2>
+				<h2>Web content writing services</h2>
 
 
 				<div class="articles">
 
 					<div class="article">
 						<h3>Blog posts</h3>
-						<p>€50 / blog post</p>
+						<p>€60 / blog post</p>
 						<ul>
 							<li>Ghostwritten (Without byline)</li>
 							<li>Minimum 5 blog posts</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
-							<li>€25 for each additional revision</li>
+							<li>€30 for each additional revision</li>
 						</ul>
 					</div>
 
@@ -62,13 +62,13 @@
 
 					<div class="article">
 						<h3>Website copywriting</h3>
-						<p>€200 / 3 pages</p>
+						<p>€250 / 3 pages</p>
 						<ul>
 							<li>Keyword research</li>
 							<li>SEO optimization</li>
 							<li>Royalty-free image sourcing (if needed)</li>
 							<li>Two revisions included</li>
-<li>€25 for each additional revision</li>
+<li>€30 for each additional revision</li>
 						</ul>
 					</div>
 
