--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<p>€60 / blog post</p>
 						<ul>
 							<li>Ghostwritten (Without byline)</li>
-							<li>Minimum 5 blog posts</li>
+							<li><strong>Minimum 5 blog posts</strong></li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
 							<li>€30 for each additional revision</li>
@@ -48,7 +48,7 @@
 						<p>€0.20-0.25 / word</p>
 						<ul>
 							<li>With byline</li>
-							<li>Minimum 500 words</li>
+							<li><strong>Minimum 500 words</strong></li>
 							<li>Keyword and topic research</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
