--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 
 					<div class="article">
-						<h3>Content marketing campaigns on Tripper</h3>
+						<h3>Sponsored content on Tripper</h3>
 						<p>€300-900</p>
 						<ul>
 						<li><a href="https://www.tripper.pt/work-with-tripper" target="_blank">Travel-related services and brands only</a></li>
