--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<section class="about-section">
 
-				<p>I’ve been a web content writer since 2014, with the ability to research and write on a variety of topics that will always be on-brand and match the client’s tone. I have an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization using only white hat techniques.</p>
+				<p>I’ve been a web content writer since 2014, with the ability to research and write on a variety of topics that will always be on-brand and match the client’s tone. I have an eye for detail and a will to look at topics from a new, fresh angle, always supported by a thorough keyword research and by SEO optimization using only white-hat techniques.</p>
 
 
 			</section>
@@ -33,48 +33,52 @@
 
 					<div class="article">
 						<h3>Blog posts</h3>
-						<p>€60 / blog post</p>
+						<p>€60<sup>*</sup> / blog post</p>
 						<ul>
 							<li>Ghostwritten (Without byline)</li>
 							<li><strong>Minimum 5 blog posts</strong></li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
-							<li>€30 for each additional revision</li>
+							<li>€30<sup>*</sup> for each additional revision</li>
+							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
 						</ul>
 					</div>
 
 					<div class="article">
 						<h3>Freelance writing</h3>
-						<p>€0.20-0.25 / word</p>
+						<p>€0.20-0.25<sup>*</sup> / word</p>
 						<ul>
 							<li>With byline</li>
 							<li><strong>Minimum 500 words</strong></li>
 							<li>Keyword and topic research</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
+							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
 						</ul>
 					</div>
 
 					<div class="article">
 						<h3>Website copywriting</h3>
-						<p>€250 / 3 pages</p>
+						<p>€250<sup>*</sup> / 3 pages</p>
 						<ul>
 							<li>Keyword research</li>
 							<li>SEO optimization</li>
 							<li>Royalty-free image sourcing (if needed)</li>
 							<li>Two revisions included</li>
+							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
 <li>€30 for each additional revision</li>
 						</ul>
 					</div>
 
 					<div class="article">
 						<h3>Sponsored content on Tripper</h3>
-						<p>€300-900</p>
+						<p>€300-900<sup>*</sup></p>
 						<ul>
 						<li><a href="https://www.tripper.pt/work-with-tripper" target="_blank">Travel-related services and brands only</a></li>
 						<li>Social media promotion</li>
 						<li>Sponsored blog posts</li>
 						<li>Brand activation campaigns</li>
+						<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
 						</ul>
 					</div>
 
