--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
 							<li>€30<sup>*</sup> for each additional revision</li>
-							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
+							<li><em><sup>*</sup>+IVA for Portuguese clients</em></li>
 						</ul>
 					</div>
 
@@ -53,7 +53,7 @@
 							<li>Keyword and topic research</li>
 							<li>SEO optimization</li>
 							<li>Two revisions included</li>
-							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
+							<li><em><sup>*</sup>+IVA for Portuguese clients</em></li>
 						</ul>
 					</div>
 
@@ -65,7 +65,7 @@
 							<li>SEO optimization</li>
 							<li>Royalty-free image sourcing (if needed)</li>
 							<li>Two revisions included</li>
-							<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
+							<li><em><sup>*</sup>+IVA for Portuguese clients</em></li>
 <li>€30 for each additional revision</li>
 						</ul>
 					</div>
@@ -78,7 +78,7 @@
 						<li>Social media promotion</li>
 						<li>Sponsored blog posts</li>
 						<li>Brand activation campaigns</li>
-						<li><em><sup>*</sup>+IVA tax for Portuguese clients</em></li>
+						<li><em><sup>*</sup>+IVA for Portuguese clients</em></li>
 						</ul>
 					</div>
 
